--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <script src="https://unpkg.com/@livelike/engagementsdk@1/livelike.umd.js"></script>
-    <!-- <script src="%PUBLIC_URL%/livelike.umd.js"></script> -->
+    <!-- <script src="https://unpkg.com/@livelike/engagementsdk@1/livelike.umd.js"></script> -->
+    <script src="%PUBLIC_URL%/livelike.umd.js"></script>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <title>LiveLike Theme Builder</title>
